[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/graphisme/Supernova.png" type="Texture" id=1]
[ext_resource path="res://src/game/Supernova/Supernova.gd" type="Script" id=2]
[ext_resource path="res://src/shaders/blackhole/blackhole_shockwave.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 1.02144
shader_param/size = 0.102144
shader_param/thickness = -0.238

[sub_resource type="CircleShape2D" id=2]
radius = 124.49

[sub_resource type="CircleShape2D" id=3]
radius = 30.4006

[sub_resource type="Animation" id=4]
resource_name = "wave"
loop = true

[node name="Supernova" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
FORCE = 10

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Aura" type="Area2D" parent="."]

[node name="attraction" type="CollisionShape2D" parent="Aura"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Centre" type="Area2D" parent="."]

[node name="mort" type="CollisionShape2D" parent="Centre"]
shape = SubResource( 3 )

[node name="wave_animation" type="AnimationPlayer" parent="."]
anims/wave = SubResource( 4 )
[connection signal="body_entered" from="Aura" to="." method="_on_Aura_body_entered"]
[connection signal="body_exited" from="Aura" to="." method="_on_Aura_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
